--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   string_validator: ^1.1.0
   provider: ^6.1.2
+  google_maps_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
